Enhance source code styling & folding | add License year range

--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -15,6 +15,7 @@ include-after-body:
     <div id="scroll-padding"></div>
     <script src='/assets/js/site.js'></script>
     <script src='/assets/js/posts.js'></script>
+    <script src='/assets/js/sourceCode.js'></script>
 comments:
   giscus:
     repo: prncevince/prncevince.io
@@ -33,4 +34,4 @@ toc-expand: 3
 citation: true
 appendix-cite-as: display
 license:
-  text: © 2024 Vincent Clemson | This post is licensed under <a href='http://creativecommons.org/licenses/by-nc-sa/4.0/' target='_blank'>CC BY-NC-SA 4.0</a>
+  text: © 2023-2025 Vincent Clemson | This post is licensed under <a href='http://creativecommons.org/licenses/by-nc-sa/4.0/' target='_blank'>CC BY-NC-SA 4.0</a>
