--- a/_quarto-site.yml
+++ b/_quarto-site.yml
@@ -95,7 +95,7 @@ format:
     code-link: true
     link-external-icon: false
     link-external-newwindow: true
-    css: [assets/css/site.css, assets/css/font.css]
+    css: [assets/css/site.css, assets/css/font.css, assets/css/sourceCode.css]
     grid:
       body-width: 1100px
       sidebar-width: 300px
