update quarto from 1.4.424 to 1.5.57:
* add lazy-loading to euler listing with lazy-loaded listing grid image explicitly set in yaml due to bug
* add draft-mode: unlinked
* move drafts to .drafts/ folder due to page navigation / sidebar link bug
* fix code copying in template
* update styling & theme to account for boostrap version change

--- a/_quarto-site.yml
+++ b/_quarto-site.yml
@@ -2,10 +2,11 @@ project:
   type: website
   output-dir: _site
   execute-dir: project
-  render: ["*.qmd", "*.ipynb", "*.Rmd", "*.md", "!SETUP.md", "!LICENSE.md", ".notes/"]
+  render: ["*.qmd", "*.ipynb", "*.Rmd", "*.md", "!SETUP.md", "!LICENSE.md", "!.notes/"]
   post-render:
     - cp -a resume _site/.
 website:
+  draft-mode: unlinked
   title: Vincent Clemson
   favicon: /assets/img/favicon.png
   site-url: https://prncevince.xyz
