fix page titles in config & pandoc template at .quarto-cli/quarto-x/share/formats/html/pandoc/metadata.html

--- a/euler/_metadata.yml
+++ b/euler/_metadata.yml
@@ -1,5 +1,5 @@
 author: Vincent Clemson
-pagetitle: '{{< meta title >}} | Vincent Clemson'
+pagetitle: '{{< meta title >}}'
 title-block-banner: false
 date-format: long
 date-modified: last-modified
