--- a/_quarto-site.yml
+++ b/_quarto-site.yml
@@ -6,7 +6,7 @@ project:
   post-render:
     - cp -a resume _site/.
 website:
-  draft-mode: unlinked
+  draft-mode: gone
   title: Vincent Clemson
   favicon: /assets/img/favicon.png
   site-url: https://prncevince.xyz
