Add sidebar search to Project Euler sidebar problems

--- a/_quarto-site.yml
+++ b/_quarto-site.yml
@@ -23,6 +23,7 @@ website:
   bread-crumbs: false
   sidebar:
     - id: euler
+      search: true
       title: Project Euler
       contents: 
         - section: Project Euler
